--- a/index.html
+++ b/index.html
@@ -44,7 +44,103 @@
         <div id="content">
 
 
-<h3>January 20, 2022</h3>
+<h3>January 26, 2023</h3>
+
+<h1>ICML 2023 Deadline</h1>
+
+The <a href="https://icml.cc/Conferences/2023">ICML 2023</a> deadline is today, we are all working towards winning tickets to Hawaii!
+
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+<h3>January 22, 2023</h3>
+
+<h1>New Semester</h1>
+
+The Spring 2023 semester at KAUST started today. I am teaching CS 332: Federated Learning.
+
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+<h3>January 21, 2023</h3>
+<h1>Papers Accepted to AISTATS 2023 and ICLR 2023</h1>
+
+
+<br>
+We've had several papers accepted to <a href="http://aistats.org/aistats2023/">26th International Conference on Artificial Intelligence and Statistics (AISTATS 2023) </a>
+and <a href="https://iclr.cc/Conferences/2023">11th International Conference on Learning Representations (ICLR 2023)</a>.
+Here they are:
+
+<br><br>
+
+<br>
+<img alt="AISTATS" src="imgs/AISTATS_logo.png" height="100">
+<br>
+
+<a href="https://scholar.google.com/citations?hl=en&user=vN2ALVYAAAAJ">Michał Grudzień*</a>, <a href="https://grigory-malinovsky.github.io">Grigory Malinovsky*</a> and Peter Richtárik<br>
+<b>Can 5th Generation Local Training Methods Support Partial Client Participation? Yes!</b>  <br>
+Accepted to AISTATS 2023  <a href="https://arxiv.org/abs/2212.14370">[arXiv]</a> <br>
+<br>
+
+<a href="https://lukangsun.github.io">Lukang Sun*</a>, <a href="https://avetx.github.io">Avetik Karagulyan*</a> and Peter Richtárik<br>
+<b>Convergence of Stein Variational Gradient Descent under a Weaker Smoothness Condition</b> <br>
+Accepted to AISTATS 2023 <a href="https://arxiv.org/abs/2206.00508">[arXiv]</a> <br>
+<br>
+
+<a href="https://qianxunk.github.io">Xun Qian*</a>, <a href="http://hendrydong.github.io">Hanze Dong</a>, <a href="http://tongzhang-ml.org">Tong Zhang</a> and Peter Richtárik<br>
+<b>Catalyst Acceleration of Error Compensated Methods Leads to Better Communication Complexity</b> <br>
+Accepted to AISTATS 2023 <a href="https://arxiv.org/abs/2301.09893">[arXiv]</a> <br>
+<br>
+
+<br>
+<img alt="ICLR" src="imgs/ICLR_logo.png" height="100">
+<br>
+
+<a href="https://k3nfalt.github.io">Alexander Tyurin*</a> and Peter Richtárik<br>
+<b>DASHA: Distributed Nonconvex Optimization with Communication Compression and Optimal Oracle Complexity</b> <br>
+Accepted to ICLR 2023 <a href="https://arxiv.org/abs/2202.01268">[arXiv]</a> <a href="https://openreview.net/forum?id=VA1YpcNr7ul">[OpenReview]</a> <br>
+<br>
+
+<a href="https://eduardgorbunov.github.io/">Eduard Gorbunov*</a>, <a href="https://sites.google.com/view/samuelhorvath">Samuel Horváth*</a>, <a href="https://gauthiergidel.github.io/">Gauthier Gidel</a> and Peter Richtárik<br>
+<b>Variance Reduction is an Antidote to Byzantines: Better Rates, Weaker Assumptions and Communication Compression as a Cherry on the Top</b> <br>
+Accepted to ICLR 2023 <a href="https://arxiv.org/abs/2206.00529">[arXiv]</a> <a href="https://openreview.net/forum?id=pfuqQQCB34">[OpenReview]</a> <br>
+<br>
+
+<a href="https://lcondat.github.io/">Laurent Condat*</a> and Peter Richtárik<br>
+<b>RandProx: Primal-Dual Optimization Algorithms with Randomized Proximal Updates</b> <br>
+Accepted to ICLR 2023 <a href="https://arxiv.org/abs/2207.12891">[arXiv]</a>  <a href="https://openreview.net/forum?id=cB4N3G5udUS">[OpenReview]</a> <br>
+<br>
+
+
+<br>
+(*) Members of my <a href="https://richtarik.org/i_team.html">Optimization and Machine Learning Lab</a> at KAUST.
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>January 20, 2023</h3>
 
 <h1>Visiting Rice University</h1>
 
@@ -62,7 +158,7 @@ César A. Uribe,  Teng Zhang and Illya Hicks. Looking forward to the conversatio
 <br>
 
 
-<h3>January 17, 2022</h3>
+<h3>January 17, 2023</h3>
 
 <h1>New Paper</h1>
 
@@ -165,9 +261,7 @@ Our NeurIPS 2022 conference papers:
 <br>
 
 <br>
-<br>
 <img alt="KAUST Optimization and Machine Learning Lab" src="imgs/OML-richtarik-NeurIPS2022.jpeg" width="720">
-<br>
 <br>
 
 
