--- a/index.html
+++ b/index.html
@@ -60,6 +60,56 @@ The <a href="https://icml.cc/Conferences/2023">ICML 2023</a> deadline is today, 
 <br>
 
 
+<h3>January 25, 2023</h3>
+
+<h1>New PhD Student: Ivan Ilin</h1>
+
+
+Ivan Ilin is joining my team as a PhD student, starting in Spring 2023. He arrived to KAUST today! <br> <br>
+
+Ivan studied BS and MS programs in Automation of Physical
+and Technical Research at <a href="https://en.wikipedia.org/wiki/Novosibirsk_State_University">Novosibirsk State University</a> since 2017. According to US News, Novosibirsk State University ranks #5 in Russia,
+after Lomonosov Moscow State University (1), Moscow Institute of Physics & Technology (2), National Research Nuclear University MEPhI (3),
+and National Research University Higher School of Economics (4), and before Tomsk State University (6), Sechenov First Moscow State Medical
+University (7), Saint Petersburg State University (8), Peter the Great St. Petersburg Polytechnic University (9), ITMO University (10),
+and Skolkovo Institute of Science & Technology (11). <br> <br>
+
+His work experience includes:
+<ul>
+<li>Undergraduate Research Assistant, Budker Institute of Nuclear Physics, Novosibirsk, Russia, 2020</li>
+<li>Deep learning Junior Researcher, ExpaSoft, Novosibirsk, Russia, since 2020</li>
+<li>Lavrentyev Institute of Hydrodynamics, Novosibirsk, Russia, 2018-2019</li>
+</ul>
+
+Ivan has so far been interested ML and DL in general, and in these topics in particular: image generation and recognition, NLP,
+voice generation, application of ML and DL in games, foundation and advanced 3d graphics generation, physics simulations,
+game design, advanced programmed animations by manim or other libraries, product and gadget design, advertisement. <br> <br>
+
+In 2016-2017, Ivan was the captain of the Russian team in International Young Physicists Tournament in Singapore/Russia.<br><br>
+
+Links to Ivan's:
+<ul>
+<li>website: <a href="http://ilinblog.ru">http://ilinblog.ru</a></li>
+<li>youtube channel: <a href="https://www.youtube.com/c/vectozavr">https://www.youtube.com/c/vectozavr</a></li>
+<li>online math school project: <a href="https://vectozavr.ru">https://vectozavr.ru</a></li>
+<li>facebook: <a href="https://www.facebook.com/ivan.ilin.12935">https://www.facebook.com/ivan.ilin.12935</a></li>
+</ul>
+
+Ivan wrote several articles, they can be found on his website in the "Мои статьи и исследования" section.<br><br>
+
+Ivan, Welcome to KAUST and to the team!!!
+
+
+<br>
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
 <h3>January 22, 2023</h3>
 
 <h1>New Semester</h1>
