--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,13 @@
 
           <h1> Prepared in 2023 </h1>
 
+          [214] Xun Qian, Hanze Dong, Tong Zhang and Peter Richtárik<br>
+          <b>Catalyst acceleration of error compensated methods leads to better communication complexity</b><br>
+          25th International Conference on Artificial Intelligence and Statistics (AISTATS 2023) <br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2301.09893">arXiv</a>] <br>
+          <br>
+
           [213] Slavomír Hanzely, Konstantin Mishchenko and Peter Richtárik<br>
           <b>Convergence of first-order algorithms for meta-learning with Moreau envelopes</b><br>
           [<a href="https://arxiv.org/abs/2301.06806">arXiv</a>] <br>
@@ -63,8 +70,8 @@
 
           [212] Michał Grudzień, Grigory Malinovsky and Peter Richtárik<br>
           <b>Can 5th generation local training methods support client sampling? Yes!</b><br>
-          <span class="important">Federated Learning Paper</span><br>
           25th International Conference on Artificial Intelligence and Statistics (AISTATS 2023) <br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2212.14370">arXiv</a>] <br>
           <br>
 
@@ -149,7 +156,7 @@
           <br>
 
           [198] Lukang Sun and Peter Richtárik <br>
-          <b>A Note on the convergence of mirrored Stein variational gradient descent under (L_0,L_1) smoothness condition</b><br>
+          <b>A Note on the convergence of mirrored Stein variational gradient descent under (L_0, L_1) smoothness condition</b><br>
           [<a href="https://arxiv.org/abs/2206.09709">arXiv</a>] [code: MSVGD] <br>
           <br>
 
