--- a/i_team.html
+++ b/i_team.html
@@ -89,6 +89,10 @@
 
           <ul>
 
+            <li>Ivan Ilin (1/2023-present), KAUST
+              <a href=""><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+            </li>
+
             <li><a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ">Abdurakhmon Sadiev</a> (9/2022-present), KAUST
               <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
@@ -149,19 +153,18 @@
 
           <ul>
 
-            <li><a href="https://www.researchgate.net/profile/Wenzhi-Fang">Wenzhi (Tom) Fang</a> (8/2022-12/2022), from ShanghaiTech University </li>
-            <li><a href="https://www.linkedin.com/in/michał-grudzień-2141a2198/?originalSubdomain=uk">Michał Grudzień</a> (7/2022-10/2022), from University of Oxford </li>
-            <li><a href="https://www.linkedin.com/in/omar-shaikh-omar-998970176/">Omar Shaikh Omar</a> (7/2022-8/2022), from University of Washington </li>
-            <li>Kaja Gruntkowska (6/2022-9/2022), from University of Warwick </li>
-            <li><a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">Arto Maranjyan</a> (6/2022-11/2022), from Yerevan State University </li>
+            <li><a href="">Dinis Seward</a> (1/2023-present), from Oxford University </li>
+            <li><a href="https://www.researchgate.net/profile/Wenzhi-Fang">Wenzhi (Tom) Fang</a> (8/2022-2/2023), from ShanghaiTech University </li>
 
           </ul>
 
+          <!--
 
           <h2>Visitors</h2>
 
           <ul>
           </ul>
+        -->
 
 
     <br><br><br>
@@ -438,6 +441,11 @@
           <h2> Research Interns</h2>
 
           <ul>
+            <li><a href="https://www.linkedin.com/in/michał-grudzień-2141a2198/?originalSubdomain=uk">Michał Grudzień</a> (7/2022-10/2022), from University of Oxford </li>
+            <li><a href="https://www.linkedin.com/in/omar-shaikh-omar-998970176/">Omar Shaikh Omar</a> (7/2022-8/2022), from University of Washington </li>
+            <li><a href="https://www.linkedin.com/in/kaja-gruntkowska-a240a924b/?trk=people_directory&originalSubdomain=pl">Kaja Gruntkowska</a> (6/2022-9/2022), from University of Warwick </li>
+            <li><a href="https://www.linkedin.com/in/arto-maranjyan/?originalSubdomain=am">Arto Maranjyan</a> (6/2022-1/2023), from Yerevan State University </li>
+
             <li><a href="https://www.researchgate.net/profile/Abdurakhmon-Sadiev">Abdurakhmon Sadiev</a> (2/2022-7/2022), from MIPT <a href="https://scholar.google.com/citations?hl=en&user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a></li>
             <li><a href="https://scholar.google.com/citations?user=BFCHfngAAAAJ&hl=en">Navish Kumar</a> (IIT Kharagpur), 11/2021-2/2022
               <a href="https://scholar.google.com/citations?hl=en&user=BFCHfngAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
