--- a/i_team.html
+++ b/i_team.html
@@ -93,6 +93,10 @@
               <a href=""><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
 
+            <li>Hanmin Li (1/2023-present), KAUST
+              <a href=""><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
+            </li>
+
             <li><a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ">Abdurakhmon Sadiev</a> (9/2022-present), KAUST
               <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ"><img src="imgs/scholar.png" alt="Google Scholar" width="10" border="0" height="10"></a>
             </li>
