--- a/i_papers.html
+++ b/i_papers.html
@@ -53,6 +53,11 @@
 
           <h1> Prepared in 2023 </h1>
 
+          [215] Abdurakhmon Sadiev, Marina Danilova, Eduard Gorbunov, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov and Peter Richtárik<br>
+          <b>High-probability bounds for stochastic optimization and variational inequalities: the case of unbounded variance</b><br>
+          [<a href="https://arxiv.org/abs/2302.00999">arXiv</a>] <br>
+          <br>
+
           [214] Xun Qian, Hanze Dong, Tong Zhang and Peter Richtárik<br>
           <b>Catalyst acceleration of error compensated methods leads to better communication complexity</b><br>
           25th International Conference on Artificial Intelligence and Statistics (AISTATS 2023) <br>
