--- a/index.html
+++ b/index.html
@@ -43,6 +43,37 @@
       <div id="wrapper" class="main">
         <div id="content">
 
+<h3>February 2, 2023</h3>
+
+<h1>New Paper</h1>
+
+<span class="important">New paper out:</span>
+<a href="https://arxiv.org/abs/2301.06806">
+"High-Probability Bounds for Stochastic Optimization and Variational Inequalities: the Case of Unbounded Variance"</a> -
+joint work with
+<a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ">Abdurakhmon Sadiev</a>,
+<a href="https://marinadanya.github.io">Marina Danilova</a>,
+<a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>,
+<a href="https://sites.google.com/view/samuelhorvath">Samuel Horváth</a>,
+<a href="https://gauthiergidel.github.io">Gauthier Gidel</a>,
+<a href="http://wias-berlin.de/people/dvureche/?lang=1">Pavel Dvurechensky</a> and
+<a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+
+<br>
+<br>
+Abstract:
+<i>
+During recent years the interest of optimization and machine learning communities in high-probability convergence of stochastic optimization methods has been growing. One of the main reasons for this is that high-probability complexity bounds are more accurate and less studied than in-expectation ones. However, SOTA high-probability non-asymptotic convergence results are derived under strong assumptions such as the boundedness of the gradient noise variance or of the objective's gradient itself. In this paper, we propose several algorithms with high-probability convergence results under less restrictive assumptions. In particular, we derive new high-probability convergence results under the assumption that the gradient/operator noise has bounded central α-th moment for α∈(1,2] in the following setups: (i) smooth non-convex / Polyak-Lojasiewicz / convex / strongly convex / quasi-strongly convex minimization problems, (ii) Lipschitz / star-cocoercive and monotone / quasi-strongly monotone variational inequalities. These results justify the usage of the considered methods for solving problems that do not fit standard functional classes studied in stochastic optimization.
+</i>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 <h3>January 26, 2023</h3>
 
