--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
+
 <html>
+
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" href="style.css">
@@ -14,8 +16,6 @@
 
       gtag('config', 'UA-168147887-1');
     </script>
-
-
   </head>
 
 
@@ -48,7 +48,7 @@
 <h1>New Paper</h1>
 
 <span class="important">New paper out:</span>
-<a href="https://arxiv.org/abs/2301.06806">
+<a href="https://arxiv.org/abs/2302.00999">
 "High-Probability Bounds for Stochastic Optimization and Variational Inequalities: the Case of Unbounded Variance"</a> -
 joint work with
 <a href="https://scholar.google.com/citations?user=R-xZRIAAAAAJ">Abdurakhmon Sadiev</a>,
@@ -56,7 +56,7 @@ joint work with
 <a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>,
 <a href="https://sites.google.com/view/samuelhorvath">Samuel Horváth</a>,
 <a href="https://gauthiergidel.github.io">Gauthier Gidel</a>,
-<a href="http://wias-berlin.de/people/dvureche/?lang=1">Pavel Dvurechensky</a> and
+<a href="http://wias-berlin.de/people/dvureche/">Pavel Dvurechensky</a> and
 <a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
 
 <br>
