--- a/i_papers.html
+++ b/i_papers.html
@@ -52,17 +52,22 @@
 
 
           <h1> Prepared in 2023 </h1>
+          
+          [216] Grigory Malinovsky, Samuel Horváth, Konstantin Burlachenko and Peter Richtárik<br>
+          <b>Federated learning with regularized client participation</b><br>
+          [<a href="https://arxiv.org/abs/2302.03662">arXiv</a>] [code: RR-CLI] <br>
+          <br>          
 
           [215] Abdurakhmon Sadiev, Marina Danilova, Eduard Gorbunov, Samuel Horváth, Gauthier Gidel, Pavel Dvurechensky, Alexander Gasnikov and Peter Richtárik<br>
           <b>High-probability bounds for stochastic optimization and variational inequalities: the case of unbounded variance</b><br>
-          [<a href="https://arxiv.org/abs/2302.00999">arXiv</a>] <br>
+          [<a href="https://arxiv.org/abs/2302.00999">arXiv</a>] [code: clipped-SGD, clipped-SSTM, R-clipped-SSTM] <br>
           <br>
 
           [214] Xun Qian, Hanze Dong, Tong Zhang and Peter Richtárik<br>
           <b>Catalyst acceleration of error compensated methods leads to better communication complexity</b><br>
           25th International Conference on Artificial Intelligence and Statistics (AISTATS 2023) <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2301.09893">arXiv</a>] <br>
+          [<a href="https://arxiv.org/abs/2301.09893">arXiv</a>] [code: ECSPDC, EC-LSVRG + Catalyst, EC-SDCA + Catalyst] <br>
           <br>
 
           [213] Slavomír Hanzely, Konstantin Mishchenko and Peter Richtárik<br>
