--- a/i_talks.html
+++ b/i_talks.html
@@ -57,6 +57,10 @@ Emerging opportunities for statistics and data sciences: data and information in
 </p>
 
 <p>
+<a href="https://www.eeml.eu/home">Eastern European Machine Learning Summer School (EEML 2023)</a>, Kosice, Slovakia, July 9-16, 2023
+</p>
+
+<p>
 <a href="https://iclr.cc/Conferences/2023">ICLR 2023</a>, Kigali, Rwanda, May 1-5, 2023
 </p>
 
