--- a/i_papers.html
+++ b/i_papers.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Peter Richtarik</title>
 
-    <link rel="alternate" type="application/rss+xml" title="Peter
-      Richtarik" href="http://rsspect.com/rss/42611.xml">
-
+    <link rel="alternate" type="application/rss+xml" title="Peter Richtarik" href="http://rsspect.com/rss/42611.xml">
 
       <!-- Global site tag (gtag.js) - Google Analytics -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=UA-168147887-3"></script>
@@ -53,6 +51,11 @@
 
           <h1> Prepared in 2023 </h1>
           
+          [217] Laurent Condat, Grigory Malinovsky and Peter Richtárik<br>
+          <b>TAMUNA: Accelerated federated learning with local training and partial participation</b><br>
+          [<a href="https://arxiv.org/abs/2302.09832">arXiv</a>] [code: TAMUNA] <br>
+          <br>                  
+          
           [216] Grigory Malinovsky, Samuel Horváth, Konstantin Burlachenko and Peter Richtárik<br>
           <b>Federated learning with regularized client participation</b><br>
           [<a href="https://arxiv.org/abs/2302.03662">arXiv</a>] [code: RR-CLI] <br>
@@ -72,9 +75,8 @@
 
           [213] Slavomír Hanzely, Konstantin Mishchenko and Peter Richtárik<br>
           <b>Convergence of first-order algorithms for meta-learning with Moreau envelopes</b><br>
-          [<a href="https://arxiv.org/abs/2301.06806">arXiv</a>] <br>
+          [<a href="https://arxiv.org/abs/2301.06806">arXiv</a>] [code: FO-MuML] <br>
           <br>
-
 
           <h1> Prepared in 2022 </h1>
 
@@ -82,23 +84,23 @@
           <b>Can 5th generation local training methods support client sampling? Yes!</b><br>
           25th International Conference on Artificial Intelligence and Statistics (AISTATS 2023) <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2212.14370">arXiv</a>] <br>
+          [<a href="https://arxiv.org/abs/2212.14370">arXiv</a>] [code: 5GCS] <br>
           <br>
 
           [211] Maksim Makarenko, Elnur Gasanov, Rustem Islamov, Abdurakhmon Sadiev and Peter Richtárik<br>
           <b>Adaptive compression for communication-efficient distributed training</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2211.00188">arXiv</a>] <br>
+          [<a href="https://arxiv.org/abs/2211.00188">arXiv</a>] [code: AdaCGD] <br>
           <br>
 
           [210] Slavomír Hanzely, Dmitry Kamzolov, Dmitry Pasechnyuk, Alexander Gasnikov, Peter Richtárik and Martin Takáč <br>
           <b>A damped Newton method achieves global $O(1/k^2)$ and local quadratic convergence rate</b><br>
           Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
-          [<a href="https://arxiv.org/abs/2211.00140">arXiv</a>] <br>
+          [<a href="https://arxiv.org/abs/2211.00140">arXiv</a>] [code: AIC Newton]<br>
           <br>
 
           [209] Artavazd Maranjyan, Mher Safaryan and Peter Richtárik <br>
-          <b>GradSkip: Communication-accelerated local gradient mthods with better computational complexity</b><br>
+          <b>GradSkip: Communication-accelerated local gradient methods with better computational complexity</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2210.16402">arXiv</a>] [code: GradSkip, GradSkip+] <br>
           <br>
@@ -427,6 +429,7 @@
 
           [158] Zhen Shi, Nicolas Loizou, Peter Richtárik and Martin Takáč<br>
           <b>AI-SARAH: Adaptive and implicit stochastic recursive gradient methods</b><br>
+          Transactions on Machine Learning Research (TMLR), 2023 <br>
           [<a href="https://arxiv.org/abs/2102.09700">arXiv</a>] [code: AI-SARAH] <br>
           <br>
 
