--- a/i_talks.html
+++ b/i_talks.html
@@ -84,7 +84,7 @@ DistributedML Seminar, Virtual, Qualcomm AI Research, 2023
 
 <p>
 [222]
-<a href="https://events.rice.edu/#!view/event/event_id/340417">CMOR Special Lecture</a>, Rice University, Houston, USA, January 20, 2023 (invited by Shiqian Ma)
+<a href="https://events.rice.edu/#!view/event/event_id/340417">CMOR Special Lecture</a>, Rice University, Houston, USA, January 20, 2023 (invited by Shiqian Ma) [<a href="talks/TALK-2023-01-20-Rice.pdf">slides</a>]
 </p>
 
 <p>
