--- a/i_papers.html
+++ b/i_papers.html
@@ -53,11 +53,13 @@
           
           [217] Laurent Condat, Grigory Malinovsky and Peter Richtárik<br>
           <b>TAMUNA: Accelerated federated learning with local training and partial participation</b><br>
+          <span class="important">Federated Learning Paper</span><br>          
           [<a href="https://arxiv.org/abs/2302.09832">arXiv</a>] [code: TAMUNA] <br>
           <br>                  
           
           [216] Grigory Malinovsky, Samuel Horváth, Konstantin Burlachenko and Peter Richtárik<br>
           <b>Federated learning with regularized client participation</b><br>
+          <span class="important">Federated Learning Paper</span><br>          
           [<a href="https://arxiv.org/abs/2302.03662">arXiv</a>] [code: RR-CLI] <br>
           <br>          
 
@@ -95,7 +97,7 @@
 
           [210] Slavomír Hanzely, Dmitry Kamzolov, Dmitry Pasechnyuk, Alexander Gasnikov, Peter Richtárik and Martin Takáč <br>
           <b>A damped Newton method achieves global $O(1/k^2)$ and local quadratic convergence rate</b><br>
-          Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
+          <a href="https://openreview.net/forum?id=rjDziEPQLQs">Advances in Neural Information Processing Systems 35 (NeurIPS 2022) </a><br>
           [<a href="https://arxiv.org/abs/2211.00140">arXiv</a>] [code: AIC Newton]<br>
           <br>
 
@@ -140,7 +142,7 @@
 
           [202] Laurent Condat and Peter Richtárik <br>
           <b>RandProx: Primal-dual optimization algorithms with randomized proximal updates</b><br>
-          11th International Conference on Learning Representations (ICLR 2023) <br>
+          <a href="https://openreview.net/forum?id=cB4N3G5udUS">11th International Conference on Learning Representations (ICLR 2023) </a><br>
           OPT2022: 14th Annual Workshop on Optimization for Machine Learning (NeurIPS 2022 Workshop)<br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2207.12891">arXiv</a>] [code: RandProx, RandProx-FB, RandProx-LC, RandProx-CP, RandProx-ADMM, RandProx-DY] <br>
@@ -148,21 +150,21 @@
 
           [201] Grigory Malinovsky, Kai Yi and Peter Richtárik <br>
           <b>Variance reduced ProxSkip: algorithm, theory and application to federated learning</b><br>
-          Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
+          <a href="https://openreview.net/forum?id=edkno3SvKo">Advances in Neural Information Processing Systems 35 (NeurIPS 2022) </a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2207.04338">arXiv</a>] [code: ProxSkip-VR, ProxSkip-GD, ProxSkip-SGD, ProxSkip-LSVRG, ProxSkip-HUB] <br>
           <br>
 
           [200] Abdurakhmon Sadiev, Dmitry Kovalev and Peter Richtárik <br>
           <b>Communication acceleration of local gradient methods via an accelerated primal-dual algorithm with inexact prox</b><br>
-          Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
+          <a href="https://openreview.net/forum?id=W72rB0wwLVu">Advances in Neural Information Processing Systems 35 (NeurIPS 2022) </a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2207.03957">arXiv</a>] [code: APDA, APDA with Inexact Prox, APDA with Inexact Prox and Accelerated Gossip] <br>
           <br>
 
           [199] Egor Shulgin and Peter Richtárik <br>
           <b>Shifted compression framework: generalizations and improvements</b><br>
-          38th Conference on Uncertainty in Artificial Intelligence (UAI 2022) <br>
+          <a href="https://proceedings.mlr.press/v180/shulgin22a.html">38th Conference on Uncertainty in Artificial Intelligence (UAI 2022) </a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.10452">arXiv</a>] [code: DCGD-SHIFT] <br>
           <br>
@@ -206,7 +208,7 @@
 
           [192] Eduard Gorbunov, Samuel Horváth, Peter Richtárik and Gauthier Gidel<br>
           <b>Variance reduction is an antidote to Byzantines: better rates, weaker assumptions and communication compression as a cherry on the top</b><br>
-          11th International Conference on Learning Representations (ICLR 2023) <br>
+          <a href="https://openreview.net/forum?id=pfuqQQCB34">11th International Conference on Learning Representations (ICLR 2023) </a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2206.00529">arXiv</a>] [code: Byz-VR-MARINA] <br>
           <br>
@@ -225,7 +227,7 @@
 
           [189] Laurent Condat, Kai Yi and Peter Richtárik<br>
           <b>EF-BV: A unified theory of error feedback and variance reduction mechanisms for biased and unbiased compression in distributed optimization</b><br>
-          Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
+          <a href="https://openreview.net/forum?id=PeJO709WUup">Advances in Neural Information Processing Systems 35 (NeurIPS 2022)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2205.04180">arXiv</a>] [code: EF-BV] <br>
           <br>
@@ -252,13 +254,13 @@
 
           [185] Dmitry Kovalev, Aleksandr Beznosikov, Abdurakhmon Sadiev, Michael Persiianov, Peter Richtárik and Alexander Gasnikov<br>
           <b>Optimal algorithms for decentralized stochastic variational inequalities</b><br>
-          Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
+         <a href="https://openreview.net/forum?id=omI5hgwgrsa">Advances in Neural Information Processing Systems 35 (NeurIPS 2022) </a><br>
           [<a href="https://arxiv.org/abs/2202.02771">arXiv</a>] [code: Algorithm 1, Algorithm 2] <br>
           <br>
 
           [184] Alexander Tyurin and Peter Richtárik<br>
           <b>DASHA: Distributed nonconvex optimization with communication compression and optimal oracle complexity</b><br>
-          10th International Conference on Learning Representations (ICLR 2023) <br>
+          <a href="https://openreview.net/forum?id=VA1YpcNr7ul">10th International Conference on Learning Representations (ICLR 2023) </a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2202.01268">arXiv</a>] [code: DASHA, DASHA-PAGE, DASHA-MVR] <br>
           <br>
@@ -272,7 +274,7 @@
 
           [182] Haoyu Zhao, Boyue Li, Zhize Li, Peter Richtárik and Yuejie Chi<br>
           <b>BEER: Fast $O(1/T)$ rate for decentralized nonconvex optimization with communication compression</b><br>
-          Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
+          <a href="https://openreview.net/forum?id=I47eFCKa1f3">Advances in Neural Information Processing Systems 35 (NeurIPS 2022) </a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2201.13320">arXiv</a>] [code: BEER] <br>
           <br>
@@ -289,7 +291,7 @@
 
           [180] Dmitry Kovalev, Alexander Gasnikov and Peter Richtárik<br>
           <b>Accelerated primal-dual gradient method for smooth and convex-concave saddle-point problems with bilinear coupling</b><br>
-          Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
+          <a href="https://openreview.net/forum?id=FncDhRcRYiN">Advances in Neural Information Processing Systems 35 (NeurIPS 2022)</a> <br>
           [<a href="https://arxiv.org/abs/2112.15199">arXiv</a>] [code: APDG] <br>
           <br>
 
@@ -308,7 +310,7 @@
 
           [177] Elnur Gasanov, Ahmed Khaled, Samuel Horváth and Peter Richtárik<br>
           <b>FLIX: A simple and communication-efficient alternative to local methods in federated learning</b><br>
-          24th International Conference on Artificial Intelligence and Statistics (AISTATS 2022) <br>
+          <a href="https://proceedings.mlr.press/v151/gasanov22a.html">24th International Conference on Artificial Intelligence and Statistics (AISTATS 2022) </a><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2111.11556">arXiv</a>] [code: FLIX] <br>
           <br>
@@ -321,8 +323,8 @@
           <br>
 
           [175] Aleksandr Beznosikov, Peter Richtárik, Michael Diskin, Max Ryabinin and Alexander Gasnikov<br>
-          Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
-          <b>Distributed methods with compressed communication for solving variational inequalities, with theoretical guarantees</b><br>
+          <b>Distributed methods with compressed communication for solving variational inequalities, with theoretical guarantees</b><br>          
+          <a href="https://openreview.net/forum?id=wClmeg9u7G">Advances in Neural Information Processing Systems 35 (NeurIPS 2022) </a> <br>
           [<a href="https://arxiv.org/abs/2110.03313">arXiv</a>] [code: MASHA1, MASHA2] <br>
           <br>
 
@@ -347,7 +349,7 @@
 
           [171] Majid Jahani, Sergey Rusakov, Zheng Shi, Peter Richtárik, Michael W. Mahoney and Martin Takáč<br>
           <b>Doubly adaptive scaled algorithm for machine learning using second-order information</b><br>
-          10th International Conference on Learning Representations (ICLR 2022)  <br>
+          <a href="https://openreview.net/forum?id=HCelXXcSEuH">10th International Conference on Learning Representations (ICLR 2022) </a> <br>
           [<a href="https://arxiv.org/abs/2109.05198">arXiv</a>] [code: OASIS] <br>
           <br>
 
@@ -359,7 +361,7 @@
 
           [169] Zhize Li and Peter Richtárik<br>
           <b>CANITA: Faster rates for distributed convex optimization with communication compression</b><br>
-          Advances in Neural Information Processing Systems 34 (NeurIPS 2021) <br>
+          <a href="https://openreview.net/forum?id=eNB4WXnNczJ">Advances in Neural Information Processing Systems 34 (NeurIPS 2021)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2107.09461">arXiv</a>] [code: CANITA] <br>
           <br>
@@ -372,20 +374,20 @@
 
           [167] Peter Richtárik, Igor Sokolov and Ilyas Fatkhullin<br>
           <b>EF21: A new, simpler, theoretically better, and practically faster error feedback</b><br>
-          Advances in Neural Information Processing Systems 34 (NeurIPS 2021) <br>
+          <a href="https://openreview.net/forum?id=8ygF02Zm51q">Advances in Neural Information Processing Systems 34 (NeurIPS 2021)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [<a href="talks/TALK-2021-EF21-FL-ICML21.pdf">slides</a>] [code: EF21, EF21+] [<a href="https://github.com/IgorSokoloff/ef21_experiments_source_code">github</a>]<br>
           <br>
 
           [166] Dmitry Kovalev, Elnur Gasanov, Peter Richtárik and Alexander Gasnikov<br>
           <b>Lower bounds and optimal algorithms for smooth and strongly convex decentralized optimization over time-varying networks</b><br>
-          Advances in Neural Information Processing Systems 34 (NeurIPS 2021) <br>
+          <a href="https://openreview.net/forum?id=L8-54wkift">Advances in Neural Information Processing Systems 34 (NeurIPS 2021) </a><br>
           [<a href="https://arxiv.org/abs/2106.04469">arXiv</a>] [code: ADOM+]<br>
           <br>
 
           [165] Bokun Wang, Mher Safaryan and Peter Richtárik<br>
-          <b>Better and numerically faster distributed optimization with smoothness-aware quantization techniques</b><br>
-          Advances in Neural Information Processing Systems 35 (NeurIPS 2022) <br>
+          <b>Theoretically better and numerically faster distributed optimization with smoothness-aware quantization techniques</b><br>
+          <a href="https://openreview.net/forum?id=BejkSpqao_N">Advances in Neural Information Processing Systems 35 (NeurIPS 2022)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2106.03524">arXiv</a>] [code: DCGD+, DIANA+]<br>
           <br>
@@ -423,13 +425,13 @@
 
           [159] Adil Salim, Laurent Condat, Dmitry Kovalev and Peter Richtárik<br>
           <b>An optimal algorithm for strongly convex minimization under affine constraints</b><br>
-          24th International Conference on Artificial Intelligence and Statistics (AISTATS 2022) <br>
+          <a href="https://proceedings.mlr.press/v151/salim22a.html">24th International Conference on Artificial Intelligence and Statistics (AISTATS 2022)</a> <br>
           [<a href="https://arxiv.org/abs/2102.11079">arXiv</a>]  <br>
           <br>
 
           [158] Zhen Shi, Nicolas Loizou, Peter Richtárik and Martin Takáč<br>
           <b>AI-SARAH: Adaptive and implicit stochastic recursive gradient methods</b><br>
-          Transactions on Machine Learning Research (TMLR), 2023 <br>
+          <a href="https://openreview.net/forum?id=WoXJFsJ6Zw">Transactions on Machine Learning Research (TMLR), 2023</a> <br>
           [<a href="https://arxiv.org/abs/2102.09700">arXiv</a>] [code: AI-SARAH] <br>
           <br>
 
@@ -442,7 +444,7 @@
 
           [156] Konstantin Mishchenko, Bokun Wang, Dmitry Kovalev and Peter Richtárik<br>
           <b>IntSGD: Floatless compression of stochastic gradients</b><br>
-          10th International Conference on Learning Representations (ICLR 2022)  <br>
+          <a href="https://openreview.net/forum?id=pFyXqxChZc">10th International Conference on Learning Representations (ICLR 2022) </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.08374">arXiv</a>] [<a href="https://www.youtube.com/watch?v=-YjXDdwkeqc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=39">5 min video</a>] [code: IntSGD, IntDIANA] <br>
           <br>
