--- a/i_papers.html
+++ b/i_papers.html
@@ -877,13 +877,11 @@
           SwitchML]<br>
           <br>
 
-          [94] Samuel Horváth, Dmitry Kovalev, Konstantin Mishchenko,
-          Peter Richtárik and Sebastian Stich<br>
+          [94] Samuel Horváth, Dmitry Kovalev, Konstantin Mishchenko, Peter Richtárik and Sebastian Stich<br>
           <b>Stochastic distributed learning with gradient quantization and double variance reduction</b><br>
-          <a href="https://www.tandfonline.com/doi/full/10.1080/10556788.2022.2117355">Optimization Methods and Software, 2022</a> <br>
+          <a href="https://www.tandfonline.com/doi/full/10.1080/10556788.2022.2117355">Optimization Methods and Software 38(1), 2023</a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/1904.05115">arXiv</a>] [code:
-          DIANA, VR-DIANA, SVRG-DIANA]<br>
+          [<a href="https://arxiv.org/abs/1904.05115">arXiv</a>] [code: DIANA, VR-DIANA, SVRG-DIANA]<br>
           <br>
 
           [93] El Houcine Bergou, Eduard Gorbunov and Peter Richtárik<br>
